--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
     <body>
         <main class="row">
             <section class="row head_top">
-
+                <header class="row">
+                    <figure class="row">
+                        <img src="assets/img/avada-seo-logo-light.svg" alt="">
+                    </figure>
+                    <nav class="row"></nav>
+                    <div class="row"></div>
+                </header>
+                <div></div>
             </section>
         </main>
     </body>
