درست کردن منوی دکمه انتهایی

--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="assets/stylesheet/global.css">
-        <link rel="stylesheet" href="assets/stylesheet/master.css" />
-        <title>allah</title>
-    </head>
-    <body>
-        <main class="row">
-            <section class="row head_top">
-                <header class="row">
-                    <figure class="row">
-                        <img src="assets/img/avada-seo-logo-light.svg" alt="">
-                    </figure>
-                    <nav class="row"></nav>
-                    <div class="row"></div>
-                </header>
-                <div></div>
-            </section>
-        </main>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/stylesheet/global.css" />
+    <link rel="stylesheet" href="assets/stylesheet/master.css" />
+    <title>allah</title>
+  </head>
+  <body>
+    <main class="row">
+      <section class="row head_top">
+        <header class="row">
+          <figure class="row">
+            <img src="assets/img/avada-seo-logo-light.svg" alt="" />
+          </figure>
+          <nav class="row">
+            <ul class="row">
+              <li><a href="">menu</a></li>
+              <li><a href="">menu</a></li>
+              <li><a href="">menu</a></li>
+              <li><a href="">menu</a></li>
+              <li><a href="">menu</a></li>
+            </ul>
+          </nav>
+          <div class="row"><a href="">click me</a></div>
+        </header>
+        <div></div>
+      </section>
+    </main>
+  </body>
 </html>
