--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <li><a href="">menu</a></li>
               <li><a href="">menu</a></li>
               <li><a href="">menu</a></li>
-              <li><a href="">menu</a></li>
+              <li><a href="">menu <strong>apply</strong></a></li>
               <li><a href="">menu</a></li>
             </ul>
           </nav>
