درست کردن کارتهای در کنار هم

--- a/index.html
+++ b/index.html
@@ -53,6 +53,48 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque repellendus labore quibusdam nam impedit voluptate eum ex laboriosam, aperiam, aspernatur tenetur ducimus iure, optio est! Nisi aut animi repellendus amet.</p>
           </article>
         </section>
+        <section class="row items">
+          <div class="row">
+             <article>
+              <div>
+                <div>
+                  <i>😘</i>
+                  <i>😘</i>
+                </div>
+
+              </div>
+              <h2>ghasem Soleimani</h2>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, doloribus ducimus reiciendis eos facere error cumque optio aliquam ab assumenda.</p>
+             </article>
+             <article>
+              <div>
+                <div>
+                  <i>😘</i>
+                  <i>😘</i>
+                </div>
+
+              </div>
+              <h2>ghasem Soleimani</h2>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, doloribus ducimus reiciendis eos facere error cumque optio aliquam ab assumenda.</p>
+             </article>
+             <article>
+              <div>
+                <div>
+                  <i>😘</i>
+                  <i>😘</i>
+                </div>
+
+              </div>
+              <h2>ghasem Soleimani</h2>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, doloribus ducimus reiciendis eos facere error cumque optio aliquam ab assumenda.</p>
+             </article>
+          </div>
+          <div class="row">
+            <figure>
+              <img src="assets/img/agency-seo-desk-front.jpg" alt="">
+            </figure>
+          </div>
+        </section>
       </div>
       
     </main>
