--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@
 
           </div>
         </section>
+        <section class="row free">
+          <div>
+           <h2>Lorem ipsum dolor sit amet.</h2>
+           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, culpa?</p>
+           <a href="">click me</a>
+          </div>
+        </section>
       </div>
     </main>
   </body>
