تکمیل کردن فوتر سایت

--- a/index.html
+++ b/index.html
@@ -120,6 +120,21 @@
 
         <section class="row services">
           <div class="row">
+            <article>
+              <div>
+                <div>
+                  <i>😘</i>
+                  <i>😘</i>
+                </div>
+              </div>
+              <h2>ghasem Soleimani</h2>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dignissimos, doloribus ducimus reiciendis eos facere error
+                cumque optio aliquam ab assumenda.
+              </p>
+              <a href="">click me</a>
+            </article>
 
             <article>
               <div>
@@ -149,7 +164,8 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Dignissimos, doloribus ducimus reiciendis eos facere error
                 cumque optio aliquam ab assumenda.
-              </p><a href="">click me</a>
+              </p>
+              <a href="">click me</a>
             </article>
 
             <article>
@@ -164,33 +180,39 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Dignissimos, doloribus ducimus reiciendis eos facere error
                 cumque optio aliquam ab assumenda.
-              </p><a href="">click me</a>
+              </p>
+              <a href="">click me</a>
             </article>
-
-            <article>
-              <div>
-                <div>
-                  <i>😘</i>
-                  <i>😘</i>
-                </div>
-              </div>
-              <h2>ghasem Soleimani</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Dignissimos, doloribus ducimus reiciendis eos facere error
-                cumque optio aliquam ab assumenda.
-              </p><a href="">click me</a>
-            </article>
-
           </div>
         </section>
         <section class="row free">
           <div>
-           <h2>Lorem ipsum dolor sit amet.</h2>
-           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, culpa?</p>
-           <a href="">click me</a>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio,
+              culpa?
+            </p>
+            <a href="">click me</a>
           </div>
         </section>
+
+        <footer class="footer_bottom">
+          <div>
+            <figure>
+              <img src="assets/img/avada-seo-logo-dark-v.svg" alt="" />
+            </figure>
+            <ul>
+              <li><a href="">menu</a></li>
+              <li><a href="">menu</a></li>
+              <li><a href="">menu</a></li>
+              <li><a href="">menu</a></li>
+              <li><a href="">menu</a></li>
+            </ul>
+            <p>
+              © Copyright 2012 - 2017 | Avada Website Builder by ThemeFusion | All Rights Reserved | Powered by WordPress
+            </p>
+          </div>
+        </footer>
       </div>
     </main>
   </body>
