قرار دادن شکلک در کنار سامانه

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <title>allah</title>
   </head>
   <body>
+    <div class="fixed">
+      <a href="">😘</a>
+    </div>
     <main class="row">
+     
       <div>
         <section class="row head_top">
           <header class="row">
