--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <a href="">😘</a>
     </div>
     <main class="row">
-     
       <div>
         <section class="row head_top">
           <header class="row">
@@ -58,15 +57,13 @@
         <section class="row agency">
           <article>
             <h2>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatibus error cumque nulla ea numquam exercitationem officia
-              illum voluptatum neque ipsam.
+              General Qassem Soleimani had many characteristics that made him
+              the center of world developments. He often thought of his martyred
+              comrades and visited their families.
             </h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
-              repellendus labore quibusdam nam impedit voluptate eum ex
-              laboriosam, aperiam, aspernatur tenetur ducimus iure, optio est!
-              Nisi aut animi repellendus amet.
+              All the people of the world thanked her for the destruction of
+              ISIS because ISIS wanted to take over the whole world.
             </p>
           </article>
         </section>
@@ -75,49 +72,132 @@
             <article>
               <div>
                 <div>
-                  <i>😘</i>
-                  <i>😘</i>
+                  <div>
+                    <i
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="64"
+                        height="64"
+                        fill="currentColor"
+                        class="bi bi-chat-right-heart-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M16 2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h9.586a1 1 0 0 1 .707.293l2.853 2.853a.5.5 0 0 0 .854-.353V2ZM8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"
+                        /></svg
+                    ></i>
+                    <i
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="64"
+                        height="64"
+                        fill="currentColor"
+                        class="bi bi-chat-right-heart-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M16 2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h9.586a1 1 0 0 1 .707.293l2.853 2.853a.5.5 0 0 0 .854-.353V2ZM8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"
+                        /></svg
+                    ></i>
+                  </div>
+                  <h2>Compassionate heart</h2>
                 </div>
               </div>
-              <h2>ghasem Soleimani</h2>
+
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Dignissimos, doloribus ducimus reiciendis eos facere error
-                cumque optio aliquam ab assumenda.
+                he had a kind heart, when the people of Iraqi Kurdistan were
+                surrounded by ISIS, she quickly reached out to them, and the
+                Sunni people of Kurdistan thanked this Iranian Shia very much.
               </p>
             </article>
             <article>
               <div>
                 <div>
-                  <i>😘</i>
-                  <i>😘</i>
+                  <div>
+                    <i
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="64"
+                        height="64"
+                        fill="currentColor"
+                        class="bi bi-camera-video-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          d="M0 5a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 4.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 13H2a2 2 0 0 1-2-2V5z"
+                        /></svg
+                    ></i>
+                    <i
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="64"
+                        height="64"
+                        fill="currentColor"
+                        class="bi bi-camera-video-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          d="M0 5a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 4.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 13H2a2 2 0 0 1-2-2V5z"
+                        /></svg
+                    ></i>
+                  </div>
+                  <h2>Fear of enemies</h2>
                 </div>
               </div>
-              <h2>ghasem Soleimani</h2>
+
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Dignissimos, doloribus ducimus reiciendis eos facere error
-                cumque optio aliquam ab assumenda.
+                The enemies of Iran's territorial integrity were very afraid of
+                him and were working against him in the media. He had become the
+                focus of the world's media.
               </p>
             </article>
             <article>
               <div>
                 <div>
-                  <i>😘</i>
-                  <i>😘</i>
+                  <div>
+                    <i
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="64"
+                        height="64"
+                        fill="currentColor"
+                        class="bi bi-chat-text-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM4.5 5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7zm0 2.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7zm0 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4z"
+                        /></svg
+                    ></i>
+                    <i
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="64"
+                        height="64"
+                        fill="currentColor"
+                        class="bi bi-chat-text-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM4.5 5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7zm0 2.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7zm0 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4z"
+                        /></svg
+                    ></i>
+                  </div>
+                  <h2>talkative</h2>
                 </div>
               </div>
-              <h2>ghasem Soleimani</h2>
+
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Dignissimos, doloribus ducimus reiciendis eos facere error
-                cumque optio aliquam ab assumenda.
+                He was a great man who was very conversational and liked to
+                solve issues with friends and enemies through dialogue, and this
+                was acknowledged by everyone.
               </p>
             </article>
           </div>
           <div class="row">
             <figure>
-              <img src="assets/img/agency-seo-desk-front.jpg" alt="" />
+              <img src="assets/img/4027233.jpg" alt="" />
             </figure>
           </div>
         </section>
@@ -213,7 +293,8 @@
               <li><a href="">menu</a></li>
             </ul>
             <p>
-              © Copyright 2012 - 2017 | Avada Website Builder by ThemeFusion | All Rights Reserved | Powered by WordPress
+              © Copyright 2012 - 2017 | Avada Website Builder by ThemeFusion |
+              All Rights Reserved | Powered by WordPress
             </p>
           </div>
         </footer>
