درست کردن بخش پلن

--- a/index.html
+++ b/index.html
@@ -394,7 +394,10 @@
         <section class="row our_work">
           <div class="our_work_header">
             <h2>Ghasem Soleimani</h2>
-            <p>All the people of the world thanked her for the destruction of ISIS because ISIS wanted to take over the whole world.</p>
+            <p>
+              All the people of the world thanked her for the destruction of
+              ISIS because ISIS wanted to take over the whole world.
+            </p>
           </div>
           <div class="row piture_content">
             <div>
@@ -546,6 +549,118 @@
             <a href="">VIEW DOCUMENTS</a>
           </div>
         </section>
+        <section class="row ourPlan">
+          <div class="ourPlan_header">
+            <h2>Our Plans</h2>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+          </div>
+          <div class="card_container">
+            <div class="card">
+              <div class="row">
+                <div class="plan_header">
+                  <h2>Standard</h2>
+                </div>
+                <div class="panel_body">
+                  <div>
+                    <span>$</span>
+                    <span>19</span>
+                    <sup>99</sup>
+                    <span>monthly</span>
+                  </div>
+                </div>
+                <div class="panel_list">
+                  <ul>
+                    <li>5 project</li>
+                    <li>5 GB Storage</li>
+                    <li>Unlimited Users</li>
+                  </ul>
+                </div>
+                <div class="panel_footer">
+                  <a href="">start today</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="row">
+                <div class="plan_header">
+                  <h2>Standard</h2>
+                </div>
+                <div class="panel_body">
+                  <div>
+                    <span>$</span>
+                    <span>19</span>
+                    <sup>99</sup>
+                    <span>monthly</span>
+                  </div>
+                </div>
+                <div class="panel_list">
+                  <ul>
+                    <li>5 project</li>
+                    <li>5 GB Storage</li>
+                    <li>Unlimited Users</li>
+                  </ul>
+                </div>
+                <div class="panel_footer">
+                  <a href="">start today</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="row">
+                <div class="plan_header">
+                  <h2>Standard</h2>
+                </div>
+                <div class="panel_body">
+                  <div>
+                    <span>$</span>
+                    <span>19</span>
+                    <sup>99</sup>
+                    <span>monthly</span>
+                  </div>
+                </div>
+                <div class="panel_list">
+                  <ul>
+                    <li>5 project</li>
+                    <li>5 GB Storage</li>
+                    <li>Unlimited Users</li>
+                  </ul>
+                </div>
+                <div class="panel_footer">
+                  <a href="">start today</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="row">
+                <div class="plan_header">
+                  <h2>Standard</h2>
+                </div>
+                <div class="panel_body">
+                  <div>
+                    <span>$</span>
+                    <span>19</span>
+                    <sup>99</sup>
+                    <span>monthly</span>
+                  </div>
+                </div>
+                <div class="panel_list">
+                  <ul>
+                    <li>5 project</li>
+                    <li>5 GB Storage</li>
+                    <li>Unlimited Users</li>
+                  </ul>
+                </div>
+                <div class="panel_footer">
+                  <a href="">start today</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        
         <section class="row free">
           <div>
             <h2>Lorem ipsum dolor sit amet.</h2>
