تکمیل دو بخش دیگر

--- a/index.html
+++ b/index.html
@@ -711,6 +711,42 @@
             </div>
           </div>
         </section>
+        <section class="row client_sey">
+            <div class="row">
+              <h2>
+                Ghasem Soleimani
+              </h2>
+              <figure>
+                <img src="assets/img/ghasem5.jpg" alt="">
+                <figcaption>All the people of the world thanked her for the destruction of ISIS because ISIS wanted to take over the whole world.</figcaption>
+              </figure>
+              <p><span>ghasem Soleimani.</span> best general</p>
+              <div>
+                <i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-record" viewBox="0 0 16 16">
+                  <path d="M8 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0 1A5 5 0 1 0 8 3a5 5 0 0 0 0 10z"/>
+                </svg></i>
+                <i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-record-fill" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M8 13A5 5 0 1 0 8 3a5 5 0 0 0 0 10z"/>
+                </svg></i>
+              </div>
+            </div>
+        </section>
+        <section class="row comany_logo">
+          <div class="row">
+            <figure>
+              <img src="assets/img/clients_partner_2-200x202.png" alt="">
+            </figure>
+            <figure>
+              <img src="assets/img/clients_partner_3-200x202.png" alt="">
+            </figure>
+            <figure>
+              <img src="assets/img/clients_partner_4-200x202.png" alt="">
+            </figure>
+            <figure>
+              <img src="assets/img/clients_partner_5-200x202.png" alt="">
+            </figure>
+          </div>
+        </section>
         <section class="row free">
           <div>
             <h2>Lorem ipsum dolor sit amet.</h2>
